# stonk

./: README.md  pyproject.toml
src/crawler/: main.py
src/crawler/scraping/: get_stock_share_distribution.py
