[project]
name = "stock-data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "ErEr",email = "jeffliao92316046@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "sqlalchemy (>2.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "twstock (>=1.4.0,<2.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "psycopg2-binary>=2.9.10",
    "onnxruntime>=1.22.1",
]

[project.optional-dependencies]
dev = [
    "black (>=24.10.0,<25.0.0)",
    "ruff>=0.12.7",
]

dashboard = [
    "streamlit (>=1.42.0,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "streamlit-searchbox>=0.1.22",
]

crawler = [
    "selenium (>=4.27.1,<5.0.0)",
    "lxml (>=5.3.0,<6.0.0)",
    "prefect (>=3.6.8,<4.0.0)",
    "torchvision>=0.22.0",
    "torch>=2.7.0",
    "onnx>=1.18.0",
    "opencv-python-headless>=4.12.0.88",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
